--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ vts_libraries/
 ###########################
 [Rr]esults*/
 matlab/vts_wrapper/*.txt
+matlab/monte_carlo_inverse/jsonlab/
 simulation_result_loading/
 # Add these back to repository
 !jsonlab/
