--- a/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
+++ b/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
@@ -4,7 +4,23 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <AssemblyName>mc</AssemblyName>
+    <RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
     <RootNamespace>Vts.MonteCarlo.CommandLineApplication</RootNamespace>
+    <AssemblyVersion>4.9.0.0</AssemblyVersion>
+    <FileVersion>4.9.0.0</FileVersion>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <Company>Virtual Photonics Technology Initiative</Company>
+    <Product>MCCL</Product>
+    <Authors>David Cuccia; Carole Hayakawa; Lisa Malenfant; Janaka Ranasinghesagara; Jennifer Nguyen; Adam Gardner; Michele Martinelli</Authors>
+    <Description>Monte-Carlo command-line application</Description>
+    <Copyright>Copyright © 2018 Laser Microbeam and Medical Program</Copyright>
+    <PackageLicenseUrl>https://github.com/VirtualPhotonics/VTS/blob/master/license.md</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/VirtualPhotonics/VTS/wiki</PackageProjectUrl>
+    <PackageIconUrl>http://virtualphotonics.org/Themes/VP/Content/Images/logo.png</PackageIconUrl>
+    <RepositoryUrl>https://github.com/VirtualPhotonics/VTS</RepositoryUrl>
+    <PackageTags>C# Monte-Carlo</PackageTags>
+    <RepositoryType>Git</RepositoryType>
+    <Version>4.9.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
