--- a/src/Vts.MonteCarlo.PostProcessor/Vts.MonteCarlo.PostProcessor.csproj
+++ b/src/Vts.MonteCarlo.PostProcessor/Vts.MonteCarlo.PostProcessor.csproj
@@ -5,6 +5,22 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>Vts.MonteCarlo.PostProcessor</RootNamespace>
     <AssemblyName>mc_post</AssemblyName>
+    <RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
+    <AssemblyVersion>4.9.0.0</AssemblyVersion>
+    <FileVersion>4.9.0.0</FileVersion>
+    <Authors>David Cuccia; Carole Hayakawa; Lisa Malenfant; Janaka Ranasinghesagara; Jennifer Nguyen; Adam Gardner; Michele Martinelli</Authors>
+    <Company>Virtual Photonics Technology Initiative</Company>
+    <Product>MCPP</Product>
+    <Description>Monte-Carlo post-processor command-line application</Description>
+    <Copyright>Copyright © 2018 Laser Microbeam and Medical Program</Copyright>
+    <PackageProjectUrl>https://github.com/VirtualPhotonics/VTS/wiki</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/VirtualPhotonics/VTS/blob/master/license.md</PackageLicenseUrl>
+    <PackageIconUrl>http://virtualphotonics.org/Themes/VP/Content/Images/logo.png</PackageIconUrl>
+    <RepositoryUrl>https://github.com/VirtualPhotonics/VTS</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
+    <PackageTags>C# Monte-Carlo</PackageTags>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <Version>4.9.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
