MC/PP: added validation to MCCL and MCPP to check that tissue OPs (e.g. mua, musp, n) are non-negative.  Found out that MCLL and MCPP run with negative values!  So fixed that with input validation check.  Also corrected headers of some tests because summary was confusing.

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -211,6 +211,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\DataStructuresValidation\DetectorInputs\dMCdROfRhodMusDetectorInputValidationTests.cs">
       <Link>MonteCarlo\DataStructuresValidation\DetectorInputs\dMCdROfRhodMusDetectorInputValidationTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\DataStructuresValidation\PostProcessorInputs\PostProcessorInputValidationTests.cs">
+      <Link>MonteCarlo\DataStructuresValidation\PostProcessorInputs\PostProcessorInputValidationTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\DataStructuresValidation\SimulationInputValidationTests.cs">
       <Link>MonteCarlo\DataStructuresValidation\SimulationInputValidationTests.cs</Link>
     </Compile>
