--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -973,6 +973,12 @@
     <Compile Include="..\Vts\MonteCarlo\Rng\SerializableMersenneTwister.cs">
       <Link>MonteCarlo\Rng\SerializableMersenneTwister.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Sources\PointAndLineSources\AdjointLineSources\AdjointLineSource.cs">
+      <Link>MonteCarlo\Sources\PointAndLineSources\AdjointLineSources\AdjointLineSource.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Sources\PointAndLineSources\AdjointLineSources\AdjointLineSourceBase.cs">
+      <Link>MonteCarlo\Sources\PointAndLineSources\AdjointLineSources\AdjointLineSourceBase.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Sources\PointAndLineSources\LineSources\CustomLineSource.cs">
       <Link>MonteCarlo\Sources\PointAndLineSources\LineSources\CustomLineSource.cs</Link>
     </Compile>
