MC: added new FluenceOfXAndYAndZAndStartingXAndY to use for adjoint simulations and capture fluence as a function of the starting (x,y) surface bin.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -667,6 +667,9 @@
     <Compile Include="..\Vts\MonteCarlo\Detectors\FluenceOfXAndYAndZAndOmegaDetector.cs">
       <Link>MonteCarlo\Detectors\FluenceOfXAndYAndZAndOmegaDetector.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\FluenceOfXAndYAndZAndStartingXAndYDetector.cs">
+      <Link>MonteCarlo\Detectors\FluenceOfXAndYAndZAndStartingXAndYDetector.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\FluenceOfXAndYAndZAndTimeDetector.cs">
       <Link>MonteCarlo\Detectors\FluenceOfXAndYAndZAndTimeDetector.cs</Link>
     </Compile>
