--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -682,6 +682,9 @@
     <Compile Include="..\Vts\MonteCarlo\Detectors\pMCROfFxDetector.cs">
       <Link>MonteCarlo\Detectors\pMCROfFxDetector.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\pMCROfRhoAndMaxDepthDetector.cs">
+      <Link>MonteCarlo\Detectors\pMCROfRhoAndMaxDepthDetector.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\pMCROfRhoAndTimeDetector.cs">
       <Link>MonteCarlo\Detectors\pMCROfRhoAndTimeDetector.cs</Link>
     </Compile>
