MC: added ROfXAndYAndThetaAndPhi detector.  While working on it realized the normalization for other theta angle detectors was in error.  The code assumed a theta start of 0, instead of pi/2.  Now all the "Total reflectance" output from MATLAB as they should.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -757,6 +757,9 @@
     <Compile Include="..\Vts\MonteCarlo\Detectors\ROfXAndYAndMaxDepthDetector.cs">
       <Link>MonteCarlo\Detectors\ROfXAndYAndMaxDepthDetector.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\ROfXAndYAndThetaAndPhiDetector.cs">
+      <Link>MonteCarlo\Detectors\ROfXAndYAndThetaAndPhiDetector.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\ROfXAndYAndTimeDetector.cs">
       <Link>MonteCarlo\Detectors\ROfXAndYAndTimeDetector.cs</Link>
     </Compile>
