MC: reverted prior push and added contructor to MCSimulation that takes in rng.  Then added ParallelMCSimulation class that inherits MCSimulation.  The problem I'm having trouble with is once all VirtualBoundaryControllers from each CPU are loaded with their individual Detector results, how to add all of the Detector results together and then normalize by the original N. All prior unit tests are passing!  This means that I didn't mess up MCSimulation with these changes.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -940,6 +940,9 @@
     <Compile Include="..\Vts\MonteCarlo\MonteCarloSimulation.cs">
       <Link>MonteCarlo\MonteCarloSimulation.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\ParallelMonteCarloSimulation.cs">
+      <Link>MonteCarlo\ParallelMonteCarloSimulation.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Photon.cs">
       <Link>MonteCarlo\Photon.cs</Link>
     </Compile>
