--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -316,6 +316,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\Factories\DetectorFactoryTests.cs">
       <Link>MonteCarlo\Factories\DetectorFactoryTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Helpers\LayerTissueRegionToolboxTests.cs">
+      <Link>MonteCarlo\Helpers\LayerTissueRegionToolboxTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Helpers\SourceToolboxTests.cs">
       <Link>MonteCarlo\Helpers\SourceToolboxTests.cs</Link>
     </Compile>
