MC: addition of 3 new pMC detectors for R(rho,maxdepth), R(rho,maxdepth) recessed, R(rho,time) recessed, associated unit tests.  Also added detectors to MCCL and MCPP simulation input providers.  Added comments to not edit the pMC infile definitions that are part of our GitHub documentation so that documentation matches code.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -685,8 +685,17 @@
     <Compile Include="..\Vts\MonteCarlo\Detectors\pMCROfFxDetector.cs">
       <Link>MonteCarlo\Detectors\pMCROfFxDetector.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\pMCROfRhoAndMaxDepthDetector.cs">
+      <Link>MonteCarlo\Detectors\pMCROfRhoAndMaxDepthDetector.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\pMCROfRhoAndMaxDepthRecessedDetector.cs">
+      <Link>MonteCarlo\Detectors\pMCROfRhoAndMaxDepthRecessedDetector.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\pMCROfRhoAndTimeDetector.cs">
       <Link>MonteCarlo\Detectors\pMCROfRhoAndTimeDetector.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\pMCROfRhoAndTimeRecessedDetector.cs">
+      <Link>MonteCarlo\Detectors\pMCROfRhoAndTimeRecessedDetector.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\pMCROfRhoDetector.cs">
       <Link>MonteCarlo\Detectors\pMCROfRhoDetector.cs</Link>
