MC: created new unit test class ParallelMonteCarloSimulationTests and moved over unit test from MonteCarloSimulationTests.  Cleaned up test, added SecondMoment and TallyCount checks.  Next to try higher dimensional result. All unit tests pass currently.

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -325,6 +325,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\MonteCarloSimulationTests.cs">
       <Link>MonteCarlo\MonteCarloSimulationTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\ParallelMonteCarloSimulationTests.cs">
+      <Link>MonteCarlo\ParallelMonteCarloSimulationTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\PhotonData\CollisionInfoDatabaseTests.cs">
       <Link>MonteCarlo\PhotonData\CollisionInfoDatabaseTests.cs</Link>
     </Compile>
