MC: CAW photon weight when at interface of exiting tissue did not update for last partial track.  This needs to be done if reflect or refract.

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -205,6 +205,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\BidirectionalScattering\BidirectionalAnalyticSolutions.cs">
       <Link>MonteCarlo\BidirectionalScattering\BidirectionalAnalyticSolutions.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\BidirectionalScattering\CAWBidirectionalTallyActionsTests.cs">
+      <Link>MonteCarlo\BidirectionalScattering\CAWBidirectionalTallyActionsTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\DataStructuresValidation\DetectorInputs\dMCdROfRhodMuaDetectorInputValidationTests.cs">
       <Link>MonteCarlo\DataStructuresValidation\DetectorInputs\dMCdROfRhodMuaDetectorInputValidationTests.cs</Link>
     </Compile>
