--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -292,6 +292,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\DAWVoxelDetectorsTests.cs">
       <Link>MonteCarlo\Detectors\DAWVoxelDetectorsTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\DetectorFiberTests.cs">
+      <Link>MonteCarlo\Detectors\DetectorFiberTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\DetectorNADynamicTests.cs">
       <Link>MonteCarlo\Detectors\DetectorNADynamicTests.cs</Link>
     </Compile>
@@ -312,6 +315,9 @@
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\SpecularLayerDetectorTests.cs">
       <Link>MonteCarlo\Detectors\SpecularLayerDetectorTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Extensions\PhotonDataExtensionMethodsTests.cs">
+      <Link>MonteCarlo\Extensions\PhotonDataExtensionMethodsTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Factories\DetectorFactoryTests.cs">
       <Link>MonteCarlo\Factories\DetectorFactoryTests.cs</Link>
