--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -346,8 +346,8 @@
     <Compile Include="..\Vts.Test\MonteCarlo\PostProcessing\PhotonDatabasePostProcessorTests.cs">
       <Link>MonteCarlo\PostProcessing\PhotonDatabasePostProcessorTests.cs</Link>
     </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\RayData\RayDatabaseTests.cs">
-      <Link>MonteCarlo\RayData\RayDatabaseTests.cs</Link>
+    <Compile Include="..\Vts.Test\MonteCarlo\RayData\ZRDRayDatabaseTests.cs">
+      <Link>MonteCarlo\RayData\ZRDRayDatabaseTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Rng\SerializableMersenneTwisterTests.cs">
       <Link>MonteCarlo\Rng\SerializableMersenneTwisterTests.cs</Link>
