--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -1015,8 +1015,14 @@
     <Compile Include="..\Vts\MonteCarlo\RayData\ZRDRayDatabase.cs">
       <Link>MonteCarlo\RayData\ZRDRayDatabase.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\RayData\ZRDRayDatabaseWriter.cs">
+      <Link>MonteCarlo\RayData\ZRDRayDatabaseWriter.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\RayData\ZRDRayDataPoint.cs">
       <Link>MonteCarlo\RayData\ZRDRayDataPoint.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\RayData\ZRDRayDataPointSerializer.cs">
+      <Link>MonteCarlo\RayData\ZRDRayDataPointSerializer.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Rng\MersenneTwisterSerializationInfo.cs">
       <Link>MonteCarlo\Rng\MersenneTwisterSerializationInfo.cs</Link>
