Added unit test to verify results from FromFileSource.GetNextPhoton.

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -355,6 +355,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\Sources\FluorescenceEmissionSourcesTests.cs">
       <Link>MonteCarlo\Sources\FluorescenceEmissionSourcesTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Sources\FromFileSourcesTests.cs">
+      <Link>MonteCarlo\Sources\FromFileSourcesTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Sources\LineSourcesTests.cs">
       <Link>MonteCarlo\Sources\LineSourcesTests.cs</Link>
     </Compile>
